; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/nts2w32err/extr_nts2w32err.c_main.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/nts2w32err/extr_nts2w32err.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATUS_SUCCESS = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%lx\00", align 1
@.str.1 = private unnamed_addr constant [85 x i8] c"NT error codes 0x0-0x%lx that get translated *not* to ERROR_MR_MID_NOT_FOUND (317)\0A\0A\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"--- Severity %ld ---\0A\00", align 1
@ERROR_MR_MID_NOT_FOUND = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [17 x i8] c"0x%08lx => %ldL\0A\00", align 1
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 0, i32* %6, align 4
  %11 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* @ERROR_SUCCESS, align 4
  store i32 %13, i32* %9, align 4
  store i32 262144, i32* %10, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp eq i32 2, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = load i8**, i8*** %5, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i64 1
  %19 = load i8*, i8** %18, align 8
  %20 = call i32 @sscanf(i8* %19, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32* %10)
  br label %21

21:                                               ; preds = %16, %2
  %22 = load i32, i32* %10, align 4
  %23 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([85 x i8], [85 x i8]* @.str.1, i64 0, i64 0), i32 %22)
  store i32 0, i32* %6, align 4
  br label %24

24:                                               ; preds = %54, %21
  %25 = load i32, i32* %6, align 4
  %26 = icmp slt i32 %25, 4
  br i1 %26, label %27, label %57

27:                                               ; preds = %24
  %28 = load i32, i32* %6, align 4
  %29 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0), i32 %28)
  %30 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %30, i32* %7, align 4
  br label %31

31:                                               ; preds = %50, %27
  %32 = load i32, i32* %7, align 4
  %33 = load i32, i32* %10, align 4
  %34 = icmp sle i32 %32, %33
  br i1 %34, label %35, label %53

35:                                               ; preds = %31
  %36 = load i32, i32* %6, align 4
  %37 = shl i32 %36, 30
  %38 = load i32, i32* %7, align 4
  %39 = or i32 %37, %38
  store i32 %39, i32* %8, align 4
  %40 = load i32, i32* %8, align 4
  %41 = call i32 @RtlNtStatusToDosError(i32 %40)
  store i32 %41, i32* %9, align 4
  %42 = load i32, i32* @ERROR_MR_MID_NOT_FOUND, align 4
  %43 = load i32, i32* %9, align 4
  %44 = icmp ne i32 %42, %43
  br i1 %44, label %45, label %49

45:                                               ; preds = %35
  %46 = load i32, i32* %8, align 4
  %47 = load i32, i32* %9, align 4
  %48 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i32 %46, i32 %47)
  br label %49

49:                                               ; preds = %45, %35
  br label %50

50:                                               ; preds = %49
  %51 = load i32, i32* %7, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %7, align 4
  br label %31

53:                                               ; preds = %31
  br label %54

54:                                               ; preds = %53
  %55 = load i32, i32* %6, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %6, align 4
  br label %24

57:                                               ; preds = %24
  %58 = load i32, i32* @EXIT_SUCCESS, align 4
  ret i32 %58
}

declare dso_local i32 @sscanf(i8*, i8*, i32*) #1

declare dso_local i32 @printf(i8*, i32, ...) #1

declare dso_local i32 @RtlNtStatusToDosError(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
